--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,10 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.11)
+Imports: Rcpp (>= 0.12.11),
+    tibble,
+    rlang,
+    dplyr
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
+Suggests: testthat
