--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ LazyData: true
 Imports: Rcpp (>= 0.12.11),
     tibble,
     rlang,
-    dplyr
+    dplyr,
+    stringdist
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 Suggests: testthat
