--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: stringcandidates
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.0.0.9001
-Author: Tarak Shahd
+Version: 0.0.0.9002
+Author: Tarak Shah
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
@@ -13,7 +13,8 @@ Imports: Rcpp (>= 0.12.11),
     tibble,
     rlang,
     dplyr,
-    stringdist
+    stringdist,
+    tokenizers
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 Suggests: testthat
