--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: stringcandidates
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.0.0.9002
+Title: Entity Data Generation and Resolution
+Version: 0.0.0.9004
 Author: Tarak Shah
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Maintainer: Tarak Shah <tarak_shah@berkeley.edu>
+Description: Create sample noisy datasets, identify possible linkages between 
+    unlinked data sets.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.11),
